--- a/HTML/atributos.html
+++ b/HTML/atributos.html
@@ -25,6 +25,13 @@
     <!-- atributo acceskey -->
     <a href="estructurahtml5.html" target="_blank" accesskey="h">Acceder</a>
 
+    <!-- atributo contenteeditable -->
+    <p>Contenido de prueba para editar</p>
+    <p contenteditable="true" spellcheck="true">Contenido de prueba para editar</p>
+
+
+    <!-- atributo contenteeditable -->
+
 
     
 </body>
